--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
 # aprendi-ate-hoje-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Site de Jogos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            background-color: #444;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Meu Site de Jogos</h1>
+</header>
+
+<nav>
+    <a href="#">Início</a>
+    <a href="#">Jogos</a>
+    <a href="#">Sobre</a>
+    <a href="#">Contato</a>
+</nav>
+
+<section>
+    <h2>Bem-vindo ao Meu Site de Jogos!</h2>
+    <p>Aqui você encontrará informações sobre os mais recentes jogos, análises, dicas e muito mais!</p>
+    <p>Explore nossas seções para descobrir os melhores jogos do momento.</p>
+</section>
+
+<footer>
+    <p>&copy; 2024 Meu Site de Jogos. Todos os direitos reservados.</p>
+</footer>
+
+</body>
+</html>
