--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site de Jogos</title>
+    <h1> a jogos de todos os tipo hoje em dia, de terror de ação fantasia etc e cada um tem sua preferemcia ex: eu gosto de jogos que tenham uma estoria massa e varias coisas para esprorar </h1>
     <style>
         body {
             font-family: Arial, sans-serif;
