--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h2>Bem-vindo ao Meu Site de Jogos!</h2>
     <p>Aqui você encontrará informações sobre os mais recentes jogos, análises, dicas e muito mais!</p>
     <p>Explore nossas seções para descobrir os melhores jogos do momento.</p>
-    <img src="minecraft" alt="Imagem de Jogos">
+    <img src="minecraft.avif" alt="Imagem de Jogos">
 </section>
 
 <footer>
