--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <a href="#">Início</a>
     <a href="#">Jogos</a>
     <a href="#">Sobre</a>
-    <a href="#">Contato</a>
+    <a href="#"><input type="pg2.html"</a>
 </nav>
 
 <section>
