--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <nav>
     <a href="#">Jogos</a>
     <a href="#">Sobre</a>
-    <a href="pg2.html"><button>pagina 2</button><a/>
+    <a href="pg2.html"><button>pagina2</button></a>
 </nav>
 
 <section>
