--- a/pg2.html
+++ b/pg2.html
@@ -7,6 +7,4 @@
 </head>
 <body>
     <h1>Meu Vídeo do YouTube</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/SEU_VIDEO_https://www.youtube.com/watch?v=9n-r5uT1Z3U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</body>
-</html>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EmTn2ZoRzC0?si=Tf9SRGmdnkIdcklv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
